# hyppos

./: README.md
hyppos-service/: Cargo.toml  diesel.toml
hyppos-service/migrations/2020-08-28-101437_create_uuid/: up.sql
hyppos-service/migrations/2020-08-28-111527_create_comments/: up.sql
hyppos-service/migrations/2020-08-28-111527_create_users/: up.sql
hyppos-service/migrations/2020-08-28-212019_create_projects/: up.sql
hyppos-service/migrations/2020-08-28-212024_create_comments/: up.sql
hyppos-service/src/: auth.rs  browse.rs  comments.rs  gh_proxy.rs  github.rs  github_types.rs  main.rs  models.rs  projects.rs  schema.rs  users.rs
hyppos-service/src/comments/: mod.rs  models.rs  schema.rs
hyppos-service/src/github/: mod.rs  types.rs
hyppos-ui/: .editorconfig  .env.production  .eslintrc  .gitignore  craco.config.js  package.json  tsconfig.json
hyppos-ui/public/: index.html
hyppos-ui/src/: config.ts  global.scss  global.theme.less  history.ts  index.tsx  react-app-env.d.ts  serviceWorker.ts
hyppos-ui/src/api/: client.ts  index.ts
hyppos-ui/src/helpers/: mobx.ts
hyppos-ui/src/pages/: Layout.tsx  classes.module.scss
hyppos-ui/src/pages/LoginPage/: LoginPage.tsx  classes.module.scss
hyppos-ui/src/pages/MainPage/: MainPage.tsx
hyppos-ui/src/pages/NotFoundPage/: NotFoundPage.tsx
hyppos-ui/src/pages/ProjectsPage/: ProjectsPage.tsx  styles.module.css
hyppos-ui/src/pages/ProjectsPage/store/: ProjectsPageStore.ts
hyppos-ui/src/pages/ReviewPage/: ReviewPage.fixture.ts  ReviewPage.tsx  classes.module.scss  types.ts
hyppos-ui/src/pages/ReviewPage/components/: Comment.tsx  Comments.tsx
hyppos-ui/src/pages/ReviewPage/store/: ReviewPageStore.ts
hyppos-ui/src/store/: RootStore.ts
hyppos-ui/src/store/AuthStore/: AuthStore.ts
hyppos-ui/src/store/Base/: Base.ts
