[package]
name = "hyppos-service"
version = "0.1.0"
authors = ["Sergey Noskov <albibek@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "^0.7"
log = "^0.4"
thiserror = "1.0.20"

reqwest = { version = "^0.10", features = ["json"] }
base64 = "^0.12"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

futures = "^0.3"
actix = "^0.8"
actix-service = "^1.0"
actix-web = "^2.0"
actix-files = "^0.2"
actix-rt = "1.0"
actix-session = "^0.3"

url = "^2.1"
http = "^0.1"

oauth2 = "^3.0"
