[package]
name = "hyppos-service"
version = "0.1.0"
authors = ["Sergey Noskov <albibek@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
chrono = { version = "0.4.0", features = ["serde"] }
dotenv = "0.10.0"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "uuid"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
